fix: Adjust mobile menu when visible

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -282,7 +282,7 @@ header {
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
-  z-index: 5;
+  z-index: 4;
 }
 @media (min-width: 768px) {
   header {
@@ -297,7 +297,7 @@ header nav {
   gap: 45px;
   height: 0;
   background-color: #1B4136;
-  z-index: 5;
+  z-index: 4;
 }
 @media (min-width: 768px) {
   header nav {
@@ -314,6 +314,7 @@ header nav.visible {
   top: 0;
   justify-content: center;
   align-items: center;
+  z-index: 5;
 }
 header nav .toggler {
   position: fixed;
@@ -394,7 +395,7 @@ header nav ul li a:visited {
 }
 header nav ul li a.active, header nav ul li a:hover, header nav ul li a:focus {
   color: #EFEDEC;
-  border-bottom: 1px solid #1B4136;
+  border-bottom: 1px solid #EFEDEC;
 }
 @media (min-width: 768px) {
   header nav ul li a.active, header nav ul li a:hover, header nav ul li a:focus {
