--- a/src/styles/sass/_header.sass
+++ b/src/styles/sass/_header.sass
@@ -4,7 +4,7 @@ header
   width: 100%
   height: 100vh
   overflow-x: hidden
-  z-index: 5
+  z-index: 4
 
   +md
     height: 100vh
@@ -17,7 +17,7 @@ header
     gap: 45px
     height: 0
     background-color: $accent-color
-    z-index: 5
+    z-index: 4
 
     +md
       width: 100%
@@ -32,6 +32,7 @@ header
       top: 0
       justify-content: center
       align-items: center
+      z-index: 5
 
     .toggler
       position: fixed
@@ -102,7 +103,7 @@ header
           &:hover,
           &:focus
             color: $light-color
-            border-bottom: 1px solid $accent-color
+            border-bottom: 1px solid $light-color
 
             +md
               color: $accent-color
